--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -8,11 +8,18 @@
         android:label="@string/app_name"
         android:theme="@style/AppTheme" >
         <activity
-            android:name=".SweetSpotActivity"
+            android:name=".activity.SweetSpotDetailsActivity"
+            android:label="Details">
+        </activity>
+        <activity
+            android:name=".activity.SweetSpotCreateActivity"
+            android:label="Create">
+        </activity>
+        <activity
+            android:name=".activity.SweetSpotListActivity"
             android:label="@string/app_name" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
-
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
