--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,13 +1,21 @@
 <?xml version="1.0" encoding="utf-8"?>
+
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
+    android:versionCode="1"
+    android:versionName="1.0"
     package="com.antonfagerberg.sweetspots" >
+
+    <uses-sdk
+        android:minSdkVersion="17"
+        android:targetSdkVersion="20" />
 
     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
     <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
+    <uses-feature android:name="android.hardware.camera" />
 
     <application
-        android:allowBackup="true"
         android:icon="@drawable/ic_launcher"
+        android:allowBackup="true"
         android:label="@string/app_name"
         android:theme="@style/AppTheme" >
 
@@ -34,7 +42,6 @@
             </intent-filter>
 
         </activity>
-        <uses-feature android:name="android.hardware.camera" />
     </application>
 
 </manifest>
